Fixed the bio overflow

--- a/client/src/pages/About/style.css
+++ b/client/src/pages/About/style.css
@@ -3,4 +3,7 @@
   border-radius: 50%;
 }
 .bio {
+  padding-top: 15px;
+  line-height: 225%;
 }
+
